# statistical-approaches

./: LICENSE  README.md  pyproject.toml
normal_distribution/: README.md  __init__.py  analysis.py  basics.py  central_limit_theorem.py  likelihood.py  main.py  standard_normal.py  visualizer.py
uniform_distribution/: README.md  __init__.py  applications.py  basics.py  main.py  transformations.py
