[project]
name = "statistical-approaches"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pyside6>=6.9.1",
    "scipy>=1.16.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
